--- a/blocks/intro/__text/__text_inf/intro__text_inf.css
+++ b/blocks/intro/__text/__text_inf/intro__text_inf.css
@@ -8,7 +8,7 @@
 
 
     .intro__text_inf{
-        width: 100%
+        max-width: 100%
     }
 }
 
@@ -17,6 +17,6 @@
 
     .intro__text_inf{
         font-size: 16px;
-        width: 100%;
+        max-width: 100%;
     }
 }
