--- a/blocks/cover/__frame/cover__frame.css
+++ b/blocks/cover/__frame/cover__frame.css
@@ -1,7 +1,7 @@
 .cover__frame{
     grid-area: button;
-    width: 191px;
-    height: 48px;
+    max-width: 191px;
+    max-height: 48px;
     background: #0278FE;
     border-radius: 4px;
     text-decoration: none;
@@ -25,7 +25,7 @@
 @media screen and (max-width: 523px){
 
     .cover__frame{
-        width: 191px;
-        height: 48px;
+        max-width: 191px;
+        max-height: 48px;
     }
 }
