--- a/blocks/intro/__text/__text_quote/intro__text_quote.css
+++ b/blocks/intro/__text/__text_quote/intro__text_quote.css
@@ -10,7 +10,7 @@
 
 
     .intro__text_quote{
-        width: 100%
+        max-width: 100%
     }
 }
 
@@ -18,6 +18,6 @@
 
     .intro__text_quote{
         font-size: 24px;
-        width: 100%;
+        max-width: 100%;
     }
 }
