--- a/blocks/intro/__text/__text_sup/intro__text_sup.css
+++ b/blocks/intro/__text/__text_sup/intro__text_sup.css
@@ -9,7 +9,7 @@
 
 
     .intro__text_sup{
-        width: 100%
+        max-width: 100%
     }
 }
 
@@ -17,7 +17,7 @@
 
     .intro__text_sup{
         font-size: 24px;
-        width: 100%;
+        max-width: 100%;
         margin: 0;
     }
 }
