--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,7 +8,7 @@
     /* or 104% */
     text-align: center;
     color: #FFFFFF;
-    width: 80%;
+    max-width: 80%;
 }
 
 @media screen and (max-width: 523px){
@@ -16,6 +16,6 @@
     .lead__title{
         font-size: 40px;
         line-height: 1.1;
-        width: 95%;
+        max-width: 95%;
     }
 }
