--- a/blocks/logo/__image/logo__image.css
+++ b/blocks/logo/__image/logo__image.css
@@ -1,11 +1,11 @@
 .logo__image{
     margin: 32px auto 90px;
-    width: 270px;
+    max-width: 270px;
 }
 
 @media screen and (max-width: 523px) {
     .logo__image {
         margin: 20px auto 50.15px;
-        width: 200px;
+        max-width: 200px;
     }
 }
