--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,6 +1,6 @@
 .place__paragraph{
     margin: 0;
-    width: 100%;
+    min-width: 100%;
     font-family: 'Inter', 'sans-serif';
     font-style: normal;
     font-weight: 400;
@@ -23,7 +23,7 @@
 @media screen and (max-width: 523px){
 
     .place__paragraph{
-        max-width: 95%;
+        min-width: 95%;
         margin: 0 auto;
     }
 }
