--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -23,6 +23,6 @@
         font-size: 32px;
         line-height: 1.09;
         min-width: 95%;
-        margin: 0 auto;
+        margin: 0;
     }
 }
