--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,5 +1,5 @@
 .place__website{
-    width: 100%;
+    max-width: 100%;
     grid-area: website;
     display: flex;
     flex-direction: column;
@@ -10,8 +10,7 @@
 @media screen and (max-width: 523px){
 
     .place__website{
-        position: relative;
         max-width: 95%;
-        margin: 0 auto;
+        margin: 0;
     }
 }
