--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -14,6 +14,7 @@
         max-width: 94%;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 4fr);
+        margin: 0 auto 88px;
     }
 }
 
@@ -23,5 +24,6 @@
         grid-template-columns: 1fr;
         grid-template-rows: repeat(8, 1fr);
         max-width: 90%;
+        margin: 0 auto 62px;
     }
 }
