update corrected code based on reviewer notes

--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,7 +3,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 1.14%;
+    line-height: 1.14;
     margin-bottom: 24px;
     color: #FFFFFF;
 }
