--- a/blocks/place/__frame/place__frame.css
+++ b/blocks/place/__frame/place__frame.css
@@ -11,8 +11,7 @@
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
-    line-height: 22px;
-    /* identical to box height */
+    line-height: 1.22;
     color: #FFFFFF;
     transition: background-color 0.3s ease-in;
     box-sizing: border-box;
@@ -22,13 +21,15 @@
         background-color: #0063D2;
     }
 
+
 @media screen and (max-width: 523px){
 
     .place__frame{
         max-width: 288px;
         max-height: 48px;
         font-size: 14px;
-        line-height: 17px;
+        line-height: 1.17;
         align-self: center;
+        padding: 16px 20px;
     }
 }
