--- a/blocks/cover/__frame/cover__frame.css
+++ b/blocks/cover/__frame/cover__frame.css
@@ -11,8 +11,7 @@
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
-    line-height: 22px;
-    /* identical to box height */
+    line-height: 1.22;
     color: #FFFFFF;
     margin: 0 auto;
     transition: background-color 0.3s ease-in;
