--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,8 +3,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
-    line-height: 22px;
-    /* or 122% */
+    line-height: 1.22;
 
     text-align: center;
 
