--- a/blocks/intro/__text/__text_sup/intro__text_sup.css
+++ b/blocks/intro/__text/__text_sup/intro__text_sup.css
@@ -18,6 +18,6 @@
     .intro__text_sup{
         font-size: 24px;
         max-width: 100%;
-        margin: 0;
+        margin: 0 0 10px;
     }
 }
