--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -14,6 +14,7 @@
 @media screen and (min-width: 524px) and (max-width: 992px) {
     .lead__subtitle {
         margin: 99px auto 69px;
+        max-width: 95%;
     }
 }
 
