--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -5,15 +5,12 @@
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
-    line-height: 163%;
+    line-height: 1.63;
     /* or 29px */
-
-
     color: #FFFFFF;
 }
 
 @media screen and (min-width: 524px) and (max-width: 992px){
-
 
     .place__paragraph{
         font-size: 16px;
