--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -6,7 +6,7 @@
     font-size: 72px;
     line-height: 1.06;
     color: #FFFFFF;
-    max-width: 460px;
+    max-width: 480px;
     grid-area: title;
 }
 
@@ -14,6 +14,7 @@
 
     .place__title{
         max-width: 340px;
+        font-size: 42px;
     }
 }
 
