--- a/blocks/place/__url-artist/place__url-artist.css
+++ b/blocks/place/__url-artist/place__url-artist.css
@@ -4,7 +4,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
-    line-height: 22px;
+    line-height: 1.22;
     /* identical to box height, or 122% */
     color: #FFFFFF;
 }
