--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -14,6 +14,7 @@
 
     .place__image{
         position: relative;
-        min-width: 100%;
+        max-width: 100vw;
+        align-self: center;
     }
 }
